[gd_scene load_steps=6 format=3 uid="uid://c53i7mvtd0bbx"]

[ext_resource type="Script" path="res://enemy.gd" id="1_gdrp6"]
[ext_resource type="Texture2D" uid="uid://smal4hmb1hlj" path="res://textures/test-enemy/enemy.png" id="1_k5m6p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vfotn"]
size = Vector2(7, 12)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ex46t"]
bg_color = Color(0, 0, 0, 0.231373)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3l68f"]
bg_color = Color(0.933333, 0.352941, 0.352941, 1)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
script = ExtResource("1_gdrp6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
texture_filter = 2
shape = SubResource("RectangleShape2D_vfotn")

[node name="Enemy" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(0.5, 0)
texture = ExtResource("1_k5m6p")

[node name="dir_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="healthbar" type="ProgressBar" parent="."]
texture_filter = 1
offset_left = -4.0
offset_top = -9.0
offset_right = 12.0
offset_bottom = -5.0
scale = Vector2(0.5, 0.5)
theme_override_styles/background = SubResource("StyleBoxFlat_ex46t")
theme_override_styles/fill = SubResource("StyleBoxFlat_3l68f")
value = 44.99
show_percentage = false

[node name="health_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="damage_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
